--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,12 @@
     @apply bg-background text-foreground;
   }
 } */
+
+/* Our font setup */
+:root {
+  --font-raleway: "Raleway", sans-serif;
+}
+
+body {
+  font-family: var(--font-raleway);
+}
